Make name column min-width to prevent wrapping

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -228,7 +228,7 @@ nav a {
 
 .leaderboard .name {
   text-align: left;
-  width: 120px;
+  min-width: 120px;
 }
 
 .leaderboard .form {
